<resources>
    <string name="app_name">My Application</string>

    <string name="get_users">get users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">Профиль</string>
    <string name="press_me">Нажми меня</string>
    <string name="my_registration">Регистрация</string>
    <string name="type_phone_number">Введите ваш номер телефона: </string>
    <string name="type_password">Введите пароль: </string>
    <string name="type_username">Введите имя пользователя: </string>
    <string name="type_age">Введите возраст: </string>
    <string name="username_text">Пользователь:</string>
    <string name="age_id">Возраст:</string>
    <string name="_18">18</string>
    <string name="profile_email">Мой почта</string>
    <string name="profile_username">Имя пользователя</string>
    <string name="type_intro">Краткое описание</string>
    <string name="type_course">Название курса</string>
    <string name="button_text_course">Посмотреть курсы</string>
    <string name="type_course_name">Введите название курса:</string>
    <string name="type_course_intro">Введите краткое описание:</string>
    <string name="type_course_description">Введите подробное описание курса:</string>
    <string name="add_course_button">Добавить курс</string>
    <string name="profile_switch_adding_course_button">Перейти к добавлению своего курса</string>
    <string name="chess_name">Шахматы</string>
    <string name="logout">Выход</string>
    <string name="games">Игры</string>
    <string name="profile">Профиль</string>
    <string name="my_information">Моя информация</string>
    <string name="settings">Настройки</string>

    <string-array name="text_style">
        <item>Светлая</item>
        <item>Темная</item>
        <item>Курсив</item>
        <item>Полужирный+Курсив</item>
    </string-array>

</resources>