<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentaition.ui.fragments.common.RegistrationFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/usernames_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/my_registration"
        android:textSize="48sp" />




    <EditText
        android:id="@+id/edit_username_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:ems="20"
        android:hint="@string/type_username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_age_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:ems="20"
        android:hint="@string/type_age"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_phone_number_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:ems="20"
        android:hint="@string/type_phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_password_id"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:ems="20"
        android:hint="@string/type_phone_number"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="18sp" />


    <Button
        android:id="@+id/profile_btn_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/press_me"
        android:textSize="48sp" />


</LinearLayout>